fix header spacing

--- a/apps/artwork/stylesheets/index.styl
+++ b/apps/artwork/stylesheets/index.styl
@@ -53,7 +53,10 @@ artwork-detail-item-height  = 36px
       opacity 0 !important
 
 .artwork-auction-results-button
-  margin-right 25px
+  margin-right 24px
+
+.related-posts-add-button.avant-garde-header-small
+  padding-left 0px
 
 #artwork-feature-navigation
   position absolute
