--- a/components/related_posts/index.styl
+++ b/components/related_posts/index.styl
@@ -98,6 +98,7 @@
 
 // Accomodate icon
 .related-posts-add-button
+  padding-left 24px
   > i
     margin-right 5px
     line-height 0
